[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version= "0.14.1", features = ["hal"] } 
sensor_lib = { path ="../sensor_lib" }
lib = { path ="../lib" }
async-std = "1.12.0"
anyhow.workspace = true