[package]
name = "sensor_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.97"
embedded-hal = "0.2.7"
thiserror = "1.0.37"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
lib = { path ="../lib" }